collectd (5.0.0-1) unstable; urgency=low

  * New upstream release.
  * debian/rules:
    - Disabled redis and write_redis plugin -- they require libcredis.
  * debian/control:
    - Added build-dep on librabbitmq-dev, required by the AMQP plugin.
    - Added build-dep on libvarnish-dev, required by the varnish plugin.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 05 Jun 2011 18:03:57 +0200

collectd (4.10.1-2) unstable; urgency=medium

  * debian/rules:
    - Added support for ‘powerpcspe’ to the Java arch mapping; thanks to
      Sebastian Andrzej Siewior for the patch (Closes: #592909).
  * debian/patches:
    - Added bts595756-notify_email-segfault -- upstream patch fixing a
      segfault in the 'notify_email' plugin; thanks to Manuel CISSE for
      reporting this (Closes: #595756).
    - Added bts592623-curl_json-file -- upstream patch fixing access to
      file:// URLs in the 'curl_json' plugin; thanks Baptiste Mille-Mathias
      for reporting this and pointing out the patch (Closes: #592623).
    - Added bts596128-reheap-fix -- upstream patch fixing the 'reheap()'
      function used to manage the "read" callbacks and making sure all plugins
      get executed correctly and in each interval (Closes: #596128).
  * Set urgency to "medium" because of the RC bug-fix.

 -- Sebastian Harl <tokkee@debian.org>  Wed, 08 Sep 2010 22:50:54 +0200

collectd (4.10.1-1) unstable; urgency=low

  * New upstream release.
  * debian/patches:
    - Removed bts561577_collectd2html_recursive_fix -- applied upstream.
    - Removed bts575029-collectd2html-xhtml -- applied upstream.
    - Removed bts557599_powerdns_fix -- applied upstream.
  * debian/control:
    - Updated standards-version to 3.9.1 -- no changes.

 -- Sebastian Harl <tokkee@debian.org>  Wed, 28 Jul 2010 18:45:31 +0200

collectd (4.10.0-1) unstable; urgency=low

  * New upstream release:
    New plugins:
    - Parse XML data: curl_xml
    - Parse values from Modbus/TCP enabled devices: modbus (disabled in